Parte final del curso

--- a/backgrounds.html
+++ b/backgrounds.html
@@ -4,35 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Variables y funciones en CSS</title>
-    <link rel="stylesheet" href="css/variables-functions.css" />
+    <title>Fondos en CSS</title>
+    <link rel="stylesheet" href="css/backgrounds.css" />
   </head>
   <body>
-    <h1>Variables y funciones en CSS</h1>
-    <h2 class="title-props">Custom Properties (Variables en CSS)</h2>
-    <article class="custom-props-1">
-      <section class="custom-props-2" style="--border-color: red">
-        <div class="custom-props-3">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic
-          consequuntur architecto unde eligendi harum totam beatae omnis
-          eveniet, provident maiores vel doloribus expedita. Alias quos
-          veritatis minima molestias. Consequatur, incidunt?
-        </div>
-      </section>
-    </article>
-
-    <h2>Funciones en CSS</h2>
-    <ul>
-      <li>var()</li>
-      <li>url()</li>
-      <li>calc()</li>
-      <li>min() & max()</li>
-      <li>clamp()</li>
-    </ul>
-
-    <div class="ch-10">1234567890</div>
-    <div class="min-max">Funciones min() & max()</div>
-
+    <h1>Fondos en CSS</h1>
+    <h4>Box</h4>
+    <div class="box"></div>
+    <h4>Background color</h4>
+    <div class="box bg-color"></div>
+    <h4>Background Image</h4>
+    <div class="box bg-image"></div>
+    <h4>Background size</h4>
+    <div class="box bg-size"></div>
+    <h4>Background-repeat</h4>
+    <div class="box bg-repeat"></div>
+    <h4>Background position</h4>
+    <div class="box bg-position"></div>
+    <h4>Background clip</h4>
+    <div class="box bg-clip"></div>
+    <h4>Background origin</h4>
+    <div class="box bg-origin"></div>
+    <h4>Background attachment</h4>
+    <div class="box bg-attachment"></div>
+    <h4>Backgrounds múltiples</h4>
+    <div class="box bg-multiple"></div>
     <a href="index.html#temario-css">☝</a>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
