--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <li>
           <a href="variables-functions.html">Variables y funciones en CSS</a>
         </li>
-        <li><a href="index.html#"></a></li>
+        <li><a href="fonts.texts.html">Estilos de fuentes y textos</a></li>
+        <li><a href="border-outline.html">Bordes y outlines</a></li>
+        <li><a href="backgrounds.html">Fondos en CSS</a></li>
+        <li><a href="images.html">Imágenes en CSS</a></li>
+        <li><a href="lists.html">Listas en CSS</a></li>
       </ul>
     </article>
 
