--- a/lists.html
+++ b/lists.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Variables y funciones en CSS</title>
-    <link rel="stylesheet" href="css/variables-functions.css" />
+    <title>Listas en CSS</title>
+    <link rel="stylesheet" href="css/lists.css" />
   </head>
   <body>
-    <h1>Variables y funciones en CSS</h1>
-    <h2 class="title-props">Custom Properties (Variables en CSS)</h2>
-    <article class="custom-props-1">
-      <section class="custom-props-2" style="--border-color: red">
-        <div class="custom-props-3">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic
-          consequuntur architecto unde eligendi harum totam beatae omnis
-          eveniet, provident maiores vel doloribus expedita. Alias quos
-          veritatis minima molestias. Consequatur, incidunt?
-        </div>
-      </section>
-    </article>
-
-    <h2>Funciones en CSS</h2>
-    <ul>
-      <li>var()</li>
-      <li>url()</li>
-      <li>calc()</li>
-      <li>min() & max()</li>
-      <li>clamp()</li>
+    <h1>Listas en CSS</h1>
+    <ul type="square" class="list">
+      <li>Primavera</li>
+      <li>Verano</li>
+      <li>Otoño</li>
+      <li>Invierno</li>
     </ul>
-
-    <div class="ch-10">1234567890</div>
-    <div class="min-max">Funciones min() & max()</div>
-
+    <ul type="square" class="list-2">
+      <li>
+        Primavera Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+        doloribus possimus vero cum enim quasi dignissimos minus veritatis sunt.
+        Minima esse tempora quaerat rem, asperiores quod, modi labore deserunt
+        perspiciatis ex quisquam? A nostrum debitis, nihil officiis amet
+        molestias sed error iste magni! Accusantium similique quae odit,
+        exercitationem assumenda optio.
+      </li>
+      <li>Verano</li>
+      <li>Otoño</li>
+      <li>Invierno</li>
+    </ul>
+    <ul type="square" class="list-3">
+      <li>Primavera</li>
+      <li>Verano</li>
+      <li>Otoño</li>
+      <li>Invierno</li>
+    </ul>
     <a href="index.html#temario-css">☝</a>
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
