--- a/border-outline.html
+++ b/border-outline.html
@@ -4,34 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Variables y funciones en CSS</title>
-    <link rel="stylesheet" href="css/variables-functions.css" />
+    <title>Bordes y Outlines</title>
+    <link rel="stylesheet" href="css/bordes-outline.css" />
   </head>
   <body>
-    <h1>Variables y funciones en CSS</h1>
-    <h2 class="title-props">Custom Properties (Variables en CSS)</h2>
-    <article class="custom-props-1">
-      <section class="custom-props-2" style="--border-color: red">
-        <div class="custom-props-3">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic
-          consequuntur architecto unde eligendi harum totam beatae omnis
-          eveniet, provident maiores vel doloribus expedita. Alias quos
-          veritatis minima molestias. Consequatur, incidunt?
-        </div>
-      </section>
-    </article>
-
-    <h2>Funciones en CSS</h2>
-    <ul>
-      <li>var()</li>
-      <li>url()</li>
-      <li>calc()</li>
-      <li>min() & max()</li>
-      <li>clamp()</li>
-    </ul>
-
-    <div class="ch-10">1234567890</div>
-    <div class="min-max">Funciones min() & max()</div>
+    <h1>Bordes y Outlines</h1>
+    <div class="box border-radius"></div>
+    <div class="box border-radius-2"></div>
+    <div class="box border-radius-3"></div>
+    <div class="box border-radius-4"></div>
+    <h2>Outline</h2>
+    <div class="box outline">Outline</div>
+    <div style="text-align: center">
+      <input type="" name="" id="" />
+    </div>
 
     <a href="index.html#temario-css">☝</a>
 
